<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    android:layout_margin="7dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_upcoming"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_quota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_300"
                    android:text="@string/kuota"
                    android:textSize="12sp"
                    android:fontFamily="@font/open_sans_medium"/>

                <TextView
                    android:id="@+id/quota_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_quota"
                    android:textColor="@color/gray_300"
                    android:text="@string/quota_value"
                    android:textSize="12sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:fontFamily="@font/open_sans_medium"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/tv_registrant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrasi"
                    android:textSize="12sp"
                    android:textColor="@color/gray_300"
                    android:fontFamily="@font/open_sans_medium"/>

                <TextView
                    android:id="@+id/registrant_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_registrant"
                    android:text="@string/registrant_value"
                    android:textSize="12sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="2dp"
                    android:textColor="@color/gray_300"
                    android:fontFamily="@font/open_sans_medium"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>