<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    android:layout_margin="7dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:fontFamily="@font/open_sans_semibold"
            android:maxEms="10"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/iv_finished"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_list_alt_24"
            app:layout_constraintStart_toEndOf="@+id/iv_finished"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/quota_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quota_value"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_book_online_24"
            app:layout_constraintStart_toEndOf="@+id/iv_finished"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/registrant_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrant_value"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/quota_value" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_location_pin_24"
            app:layout_constraintStart_toEndOf="@+id/iv_finished"
            app:layout_constraintTop_toBottomOf="@+id/registrant_value"
            tools:ignore="UnknownIdInLayout" />

        <TextView
            android:id="@+id/location_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toBottomOf="@+id/registrant_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>